# learning-opengl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
snapshots/ch6_two_triangles_one_dark_red_pass_color_from_vertex_shader_to_fragment_shader/: initializeWindow.cpp  initializeWindow.h
snapshots/ch6_two_triangles_one_dark_red_pass_color_from_vertex_shader_to_fragment_shader/shaders/: vertexShader.glsl
src/: initializeRectangleVertices.cpp  initializeRectangleVertices.h  initializeShaders.cpp  initializeShaders.h  initializeVertices.cpp  initializeVertices.h  main.cpp
src/shaders/: fragmentShader.glsl  fragmentShaderUniform.glsl  vertexShader.glsl
